Created endpoint for unsuspending users and removed start_time from suspendUser endpoint
