# a7_openapi.yaml
@@ -1367,9 +1367,6 @@ paths:
               properties:
                 reason:
                   type: string
-                start_time:
-                  type: string
-                  format: date
                 end_time:
                   type: string
                   format: date
@@ -1403,19 +1400,6 @@ paths:
           schema:
             type: integer
           required: true
-
-      requestBody:
-        required: true
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                end_time:
-                  type: string
-                  format: date
-              required:
-                - end_time
 
       responses:
         "200":
